--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -11,26 +11,26 @@
 <body class="bg-body-tertiary">
     <div class="container">
         <h1>회원 가입</h1>
-        <form th:action="@{/register}" th:object="${user}" method="post">
+        <form id="registerForm">
             <div>
                 <label for="username" class="form-label">사용자 이름:</label>
-                <input type="text" id="username" th:field="*{username}" class="form-control" />
+                <input type="text" id="username" class="form-control" />
             </div>
             <div>
                 <label for="password" class="form-label">암호:</label>
-                <input type="password" id="password" th:field="*{password}" class="form-control" />
+                <input type="password" id="password" class="form-control" />
             </div>
             <div>
                 <label for="email" class="form-label">메일 주소:</label>
-                <input type="email" id="email" th:field="*{email}" class="form-control" />
+                <input type="email" id="email" class="form-control" />
             </div>
             <div>
                 <label for="bio" class="form-label">자기 소개:</label>
-                <input type="text" id="bio" th:field="*{bio}" class="form-control" />
+                <input type="text" id="bio" class="form-control" />
             </div>
             <div>
                 <label for="image" class="form-label">프로필 이미지:</label>
-                <input type="file" id="image" th:field="*{profileImageUrl}" class="form-control" />
+                <input type="file" id="image" class="form-control" />
             </div>
             <hr class="my-4" />
             <div>
@@ -40,22 +40,40 @@
         <div th:if="${param.success}">
             <p>가입을 완료하였습니다.</p>
         </div>
+
+        <!-- 가입을 위한 데이터 전달. 아직 그림 파일 전달 기능은 구현하지 않았습니다. -->
+        <script> 
+            document.getElementById('registerForm')
+                .addEventListener('submit', function(event) {
+                    event.preventDefault();
+                    const username = document.getElementById('username').value;
+                    const password = document.getElementById('password').value;
+                    const email = document.getElementById('email').value;
+                    const bio = document.getElementById('bio').value;
+                    const image = document.getElementById('image').files[0];
+                    const data = { username, password, email, bio};
+                    postJSON(data);
+                });
+        </script>
     </div>
     <script>
         async function postJSON(data) {
             try {
-                const formData = new FormData();
-                const blob = new Blob([JSON.stringify(data)], { type: "application/json" });
-                formData.append("user", blob);
+                const formData = new FormData(); // multipart form-data 생성
+                const blob = new Blob([JSON.stringify(data)], { type: "application/json" }); // JSON 데이터를 Blob으로 변환
+                formData.append("user", blob); // form-data에 JSON 데이터 추가
                 
                 const response = await fetch("/api/register", {
                     method: "POST",
                     body: formData
                 }
                 );
-                
-                console.log( formData );
-                const result = await response.json();
+                const result = await response.status;
+                if (result === 201) { // 가입 성공
+                    window.location.href = "/login"; // 로그인 페이지로 이동
+                } else {
+                    alert("가입에 실패하였습니다. id나 email이 중복되었을 수 있습니다.");
+                }
                 console.log("성공:", result);
             } catch (error) {
                 console.error("실패:", error);
