--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="btn btn-outline-success" href="/postform.html" id="createPostBtn">게시물 작성</a>
+                        <button class="btn btn-outline-success" id="createPostBtn">게시물 작성</button>
                     </li>
                     <li class="nav-item">
                         <a class="btn btn-outline-primary" href="#" id="profileBtn">프로필</a>
@@ -68,23 +68,33 @@
         }
     }
 
-    document.addEventListener("DOMContentLoaded", btnStatus);
+    document.addEventListener("DOMContentLoaded", function () {
+        btnStatus();
 
-    // 로그아웃 요청
-    document.getElementById("logoutBtn").addEventListener("click", function () {
-        fetch("/api/logout", {
-            method: "POST",
-            headers: {
-                "Authorization": "Bearer " + localStorage.getItem("token")
-            }
-        })
-        .then(response => {
-            if (response.ok) {
-                localStorage.removeItem("token");
-                window.location.href = "/api/login";
-            } else {
-                alert("로그아웃 실패!");
-            }
+        // 게시물 작성 버튼 클릭 시 post-create 페이지로 이동
+        let createPostBtn = document.getElementById("createPostBtn");
+        if (createPostBtn) {
+            createPostBtn.addEventListener("click", function() {
+                window.location.href = "/post-create";
+            });
+        }
+
+        // 로그아웃 요청
+        document.getElementById("logoutBtn").addEventListener("click", function () {
+            fetch("/api/logout", {
+                method: "POST",
+                headers: {
+                    "Authorization": "Bearer " + localStorage.getItem("token")
+                }
+            })
+            .then(response => {
+                if (response.ok) {
+                    localStorage.removeItem("token");
+                    window.location.href = "/api/login";
+                } else {
+                    alert("로그아웃 실패!");
+                }
+            });
         });
     });
 </script>
