--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
     <title>회원 로그인</title>
     <!-- 부트스트랩 CSS -->
@@ -53,7 +53,7 @@
                 return;
             }
             console.log("성공:", result);
-            localStorage.setItem("token", result.token);
+            localStorage.setItem("token", result.token.substring(7)); // 앞의 bearer 삭제
             location.href = "/users/"+result.uid+"/profile";   
         } catch (error) {
             alert("오류 발생:", error);
