--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -10,7 +10,8 @@
 
         /* 로고 스타일 */
         .navbar-brand img {
-            height: 40px; /* 로고 크기 조정 */
+            height: 30px; /* 기존 40px → 30px로 줄임 */
+            max-width: 100px; /* 로고 너비 제한 */
         }
     </style>
 </head>
